--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.2",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.10"
   },
